# fastapi-project-blueprint

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 3f294bfb2e3f_init_migration.py
core/: main.py  schemas.py  settings.py
core/db/: models.py  queries.py
tests/: conftest.py
tests/api/: test_api.py
tests/factories/: __init__.py  models_factory.py  schemas_factory.py
